fix(): overflow of dummy div

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -204,7 +204,7 @@ ROWS
   float: none;
 }
 .dummy {
-  padding-top: 100%; /* forces 1:1 aspect ratio */
+//  padding-top: 100%; /* forces 1:1 aspect ratio */
 }
 
 .img-container {
